--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
-body{margin:40px
-auto;max-width:650px;line-height:1.6;font-size:18px;color:#444;padding:0
-10px}
+body    {margin:40px
+        auto;max-width:650px;line-height:1.6;font-size:18px;color:#444;padding:0
+        10px
+        }
+
 h1,h2,h3{line-height:1.2}
 
 blockquote {
@@ -9,10 +11,10 @@ blockquote {
     margin-block-end: 1em;
     margin-inline-start: 40px;
     margin-inline-end: 40px;
-}
+            }
 
 code {
     font-family: monospace;
-}
+    }
 
 #1.4 {line-height: 1.4} /*à voir plus tard*/
